# sphinxcontrib-copydirs

./: CONTRIBUTING.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
sphinxcontrib/: __init__.py
sphinxcontrib/copydirs/: __init__.py  copydirs.py
tests/: conftest.py  test_copydirs.py  test_integration.py  test_setup.py
tests/roots/test-dir-link/: conf.py  doc1.rst  index.rst
tests/roots/test-dir-link/examples/: index.rst
